--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           Você vai se surpreender com essa descoberta.
         </p>
 
-        <center><a href="https://lotosniper.com/147-2/"><button type="button" class="btn btn-danger" >Clique Aqui para VER o VÍDEO >>
+        <center><a href="https://appsniper.club/novoapp/?domain=https://pay.chegow.com/checkout/j5v8d=um/37?offDiscount=44OFF&split=12"><button type="button" class="btn btn-danger" >Clique Aqui para VER o VÍDEO >>
 </button></a></center>
 
         <p>
